사이드바 스타일 수정

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -8,24 +8,44 @@
 
 main {
   min-height: 100vh;
+  background-color: white;
 }
 
 .sidebar {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 258px;
-  padding: 10px;
-  background-color: lavender;
+  width: 276px;
+  box-shadow: rgba(55, 53, 47, 0.09) 0px 1px 0px;
+  background-color: rgb(247, 247, 245);
   height: 100vh;
 }
 
 .sidebar nav {
-  overflow: auto;
+  height: 92%;
+  padding: 10px;
+}
+
+.sidebar nav::-webkit-scrollbar {
+  background-color: #d3d1cb rgba(0, 0, 0, 0);
+}
+
+.sidebar nav > ul {
+  height: 90%;
+  overflow-y: scroll;
+}
+
+.list-item {
+  color: #5f5e5b;
+  font-weight: 500;
+}
+
+.user-profile {
+  margin-top: 18px;
 }
 
 .contentPage {
-  background-color: #dedae3;
+  background-color: white;
   width: 80%;
   height: 100vh;
   overflow: auto;
@@ -34,7 +54,7 @@ main {
 .editor {
   display: flex;
   flex-direction: column;
-  padding: 40px;
+  padding: 130px;
 }
 
 .editor-title {
@@ -82,6 +102,10 @@ main {
   cursor: pointer;
 }
 
+.item-text button {
+  padding-right: 2px;
+}
+
 .text {
   display: block;
   text-overflow: ellipsis;
@@ -90,13 +114,26 @@ main {
 }
 
 .header {
-  height: 27px;
-  font-size: 17px;
-  font-weight: 600;
+  height: 45px;
+  font-size: 15px;
+  font-weight: 400;
+  padding-left: 4px;
+}
+
+.header span {
+  font-size: 20px;
 }
 
 .create-actions-box {
-  padding-top: 20px;
+  min-height: 54px;
+  display: flex;
+  align-items: center;
+  padding: 12px 8px;
+  border-top: 1px solid rgba(55, 53, 47, 0.09);
+}
+
+.create-action span {
+  padding-right: 10px;
 }
 
 .arrow__btn,
@@ -120,4 +157,13 @@ main {
 
 .rotated:active {
   transform: rotate(-90deg);
+}
+
+.material-icons {
+  font-size: 20px;
+  color: rgba(55, 53, 47, 0.9);
+}
+
+.no-child {
+  color: rgba(55, 53, 47, 0.5);
 }
