--- a/src/style/main.css
+++ b/src/style/main.css
@@ -23,7 +23,7 @@ main {
 
 .sidebar nav {
   height: 92%;
-  padding: 10px;
+  padding: 17px 10px 10px 13px;
 }
 
 .sidebar nav::-webkit-scrollbar {
@@ -38,10 +38,6 @@ main {
 .list-item {
   color: #5f5e5b;
   font-weight: 500;
-}
-
-.user-profile {
-  margin-top: 18px;
 }
 
 .contentPage {
@@ -59,22 +55,48 @@ main {
 
 .editor-title {
   width: 100%;
-  height: 58px;
+  min-height: 58px;
   box-sizing: border-box;
-  border: 2px solid white;
   border-radius: 4px;
   font-size: 32px;
   padding: 10px 7px;
+  line-height: 44px;
+  font-weight: 500;
 }
 
 .editor-content {
   width: 100%;
-  height: 600px;
+  min-height: 600px;
   box-sizing: border-box;
   padding: 8px;
   margin-top: 10px;
-  border: 2px solid white;
   border-radius: 4px;
+  line-height: 23px;
+}
+
+.editor-content,
+.editor-title {
+  /* border: 1px solid black; */
+}
+
+.editor-title[contenteditable="true"]:empty:before {
+  font-weight: 600;
+  color: rgba(55, 53, 47, 0.15);
+}
+
+.editor-content[contenteditable="true"]:empty:before {
+  color: rgba(55, 53, 47, 0.5);
+}
+
+[contenteditable="true"]:empty:before {
+  content: attr(placeholder);
+  display: block;
+  color: rgba(55, 53, 47, 0.15);
+}
+
+.editor-title:focus-visible,
+.editor-content:focus-visible {
+  outline: none;
 }
 
 .title {
@@ -117,7 +139,6 @@ main {
   height: 45px;
   font-size: 15px;
   font-weight: 400;
-  padding-left: 4px;
 }
 
 .header span {
