--- a/src/style/main.css
+++ b/src/style/main.css
@@ -188,3 +188,43 @@ main {
 .no-child {
   color: rgba(55, 53, 47, 0.5);
 }
+
+.post-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  height: 44px;
+  padding-left: 12px;
+  padding-right: 10px;
+}
+
+.post-breadCrumble {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.breadCrumble-item {
+  color: rgb(55, 53, 47);
+  white-space: no-wrap;
+  height: 24px;
+  min-width: 0px;
+  padding: 2px 6px;
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 14px;
+  border-radius: 6px;
+  line-height: 1.2;
+}
+
+.breadCrumble-item:hover {
+  background-color: rgba(55, 53, 47, 0.06);
+}
+
+.bar {
+  font-size: 12px;
+  margin-left: 2px;
+  margin-right: 2px;
+  color: rgba(55, 53, 47, 0.5);
+}
